...

    <!-- FloatingActionButton to add new goals -->

    <!-- TextView for 'No Goals for the Day' message -->

    <Button
        android:id="@+id/forwardButton"
        android:layout_width="72dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_forward"
        android:drawableRight="@drawable/ic_forward"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_focus_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="14dp"
        android:text="Focus Mode"
        app:layout_constraintBottom_toTopOf="@+id/goals_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateText" />

    <TextView
        android:id="@+id/text_focus"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
...
        app:layout_constraintBottom_toTopOf="@+id/btn_focus_mode"
        app:layout_constraintEnd_toStartOf="@+id/forwardButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_goal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="665dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_goals_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_goals_for_the_day"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
...
