<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="goal_frequencies">
        <item>One-time</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="day_frequencies">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>
    <string-array name="recur_frequencies">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
    </string-array>
    <string-array name="contexts">
        <item>Home</item>
        <item>Work</item>
        <item>School</item>
        <item>Errands</item>
    </string-array>
</resources>
