...
        android:layout_marginBottom="8dp"
        android:background="@drawable/context_home"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/goal_checkbox"
        app:layout_constraintStart_toEndOf="@+id/goal_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goal_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
